Single registry. Cleaned up dependencies. Support for registry in builder.