@@ -14,7 +14,7 @@
  * limitations under the License.
  */
 
-package io.helidon.builder.api;
+package io.helidon.common.config;
 
 import java.util.ArrayList;
 import java.util.HashMap;
@@ -25,11 +25,10 @@ import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
 
+import io.helidon.builder.api.Prototype;
 import io.helidon.common.HelidonServiceLoader;
-import io.helidon.common.config.Config;
-import io.helidon.common.config.ConfigException;
-import io.helidon.common.config.ConfiguredProvider;
-import io.helidon.common.config.NamedService;
+import io.helidon.service.registry.ServiceRegistry;
+import io.helidon.service.registry.Services;
 
 final class ProvidedUtil {
     private static final System.Logger PROVIDER_LOGGER = System.getLogger(Prototype.class.getName() + ".provider");
@@ -175,6 +174,92 @@ final class ProvidedUtil {
         }
     }
 
+    static <T extends NamedService> List<T> discoverServices(Config config,
+                                                             String configKey,
+                                                             Optional<ServiceRegistry> serviceRegistry,
+                                                             Class<? extends ConfiguredProvider<T>> providerType,
+                                                             Class<T> configType,
+                                                             boolean allFromRegistry,
+                                                             List<T> existingValues) {
+
+        // type and name is a unique identification of a service - for services already defined on the builder
+        // do not add them from configuration (as this would duplicate service instances)
+        Set<TypeAndName> ignoredServices = new HashSet<>();
+        existingValues.forEach(it -> ignoredServices.add(new TypeAndName(it.type(), it.name())));
+
+        boolean discoverServices = config.get(configKey + "-discover-services").asBoolean().orElse(allFromRegistry);
+        Config providersConfig = config.get(configKey);
+
+        List<ConfiguredService> configuredServices = new ArrayList<>();
+
+        // all child nodes of the current node
+        List<Config> serviceConfigList = providersConfig.asNodeList()
+                .orElseGet(List::of);
+        boolean isList = providersConfig.isList();
+
+        for (Config serviceConfig : serviceConfigList) {
+            configuredServices.add(configuredService(serviceConfig, isList));
+        }
+        RegistryWrap wrap = serviceRegistry.isPresent()
+                ? new RealRegistry(serviceRegistry.get())
+                : StaticAccessRegistry.INSTANCE;
+
+        // now we have all service configurations, we can start building up instances
+        if (providersConfig.isList()) {
+            // driven by order of declaration in config
+            return servicesFromList(wrap,
+                                    providerType,
+                                    configType,
+                                    configuredServices,
+                                    discoverServices,
+                                    ignoredServices);
+        } else {
+            // driven by service loader order
+            return servicesFromObject(providersConfig,
+                                      wrap,
+                                      providerType,
+                                      configType,
+                                      configuredServices,
+                                      discoverServices,
+                                      ignoredServices);
+        }
+    }
+
+    static <T extends NamedService> Optional<T>
+    discoverService(Config config,
+                    String configKey,
+                    Optional<ServiceRegistry> serviceRegistry,
+                    Class<? extends ConfiguredProvider<T>> providerType,
+                    Class<T> configType,
+                    boolean discoverServices,
+                    Optional<T> existingValue) {
+
+        // there is an explicit configuration for this service, ignore configuration
+        if (existingValue.isPresent()) {
+            return Optional.empty();
+        }
+
+        // all child nodes of the current node
+        List<Config> serviceConfigList = config.get(configKey).asNodeList()
+                .orElseGet(List::of);
+
+        // if more than one is configured in config, fail
+        // if more than one exists in service loader, use the first one
+        if (serviceConfigList.size() > 1) {
+            throw new ConfigException("There can only be one provider configured for " + config.key());
+        }
+
+        List<T> services = discoverServices(config,
+                                            configKey,
+                                            serviceRegistry,
+                                            providerType,
+                                            configType,
+                                            discoverServices,
+                                            List.of());
+
+        return services.isEmpty() ? Optional.empty() : Optional.of(services.getFirst());
+    }
+
     private static <T extends NamedService> List<T>
     servicesFromObject(Config providersConfig,
                        HelidonServiceLoader<? extends ConfiguredProvider<T>> serviceLoader,
@@ -304,7 +389,7 @@ final class ProvidedUtil {
                             "Service provider configuration defined as a list must have a single node that is the type, "
                                     + "with children containing the provider configuration. Failed on: " + serviceConfig.key());
                 }
-                usedConfig = configs.get(0);
+                usedConfig = configs.getFirst();
                 name = usedConfig.name();
                 type = usedConfig.get(KEY_SERVICE_TYPE).asString().orElse(name);
                 enabled = usedConfig.get(KEY_SERVICE_ENABLED).asBoolean().orElse(enabled);
@@ -320,9 +405,152 @@ final class ProvidedUtil {
         return new ConfiguredService(new TypeAndName(type, name), serviceConfig, enabled);
     }
 
+    private static <T extends NamedService> List<T>
+    servicesFromList(RegistryWrap serviceRegistry,
+                     Class<? extends ConfiguredProvider<T>> providerType,
+                     Class<T> configType,
+                     List<ConfiguredService> configuredServices,
+                     boolean allFromServiceLoader,
+                     Set<TypeAndName> ignoredServices) {
+        Map<String, ConfiguredProvider<T>> allProvidersByType = new HashMap<>();
+        Map<String, ConfiguredProvider<T>> unusedProvidersByType = new LinkedHashMap<>();
+
+        serviceRegistry.all(providerType)
+                .forEach(provider -> {
+                    allProvidersByType.put(provider.configKey(), provider);
+                    unusedProvidersByType.put(provider.configKey(), provider);
+                });
+
+        List<T> result = new ArrayList<>();
+
+        // first add all configured
+        for (ConfiguredService service : configuredServices) {
+            TypeAndName typeAndName = service.typeAndName();
+            if (!ignoredServices.add(typeAndName)) {
+                unusedProvidersByType.remove(typeAndName.type());
+
+                if (PROVIDER_LOGGER.isLoggable(System.Logger.Level.DEBUG)) {
+                    PROVIDER_LOGGER.log(System.Logger.Level.DEBUG, "Service: " + typeAndName
+                            + " is already added in builder, ignoring configured one.");
+                }
+
+                continue;
+            }
+            ConfiguredProvider<T> provider = allProvidersByType.get(typeAndName.type());
+            if (provider == null) {
+                throw new ConfigException("Unknown provider configured. Expecting a provider with type \"" + typeAndName.type()
+                                                  + "\", but only the following providers are supported: "
+                                                  + allProvidersByType.keySet() + ", "
+                                                  + "provider interface: " + providerType.getName()
+                                                  + ", configured service: " + configType.getName());
+            }
+            unusedProvidersByType.remove(typeAndName.type());
+            if (service.enabled()) {
+                result.add(provider.create(service.serviceConfig(), typeAndName.name()));
+            }
+        }
+
+        // then (if desired) add the rest
+        if (allFromServiceLoader) {
+            unusedProvidersByType.forEach((type, provider) -> {
+                if (ignoredServices.add(new TypeAndName(type, type))) {
+                    result.add(provider.create(Config.empty(), type));
+                }
+            });
+        }
+
+        return result;
+    }
+
+    private static <T extends NamedService> List<T>
+    servicesFromObject(Config providersConfig,
+                       RegistryWrap serviceRegistry,
+                       Class<? extends ConfiguredProvider<T>> providerType,
+                       Class<T> configType,
+                       List<ConfiguredService> configuredServices,
+                       boolean allFromServiceLoader,
+                       Set<TypeAndName> ignoredServices) {
+        // order is determined by service loader
+        Set<String> availableProviders = new HashSet<>();
+        Map<String, ConfiguredService> allConfigs = new HashMap<>();
+        configuredServices.forEach(it -> allConfigs.put(it.typeAndName().type, it));
+        Set<String> unusedConfigs = new HashSet<>(allConfigs.keySet());
+
+        List<T> result = new ArrayList<>();
+
+        List<? extends ConfiguredProvider<T>> all = serviceRegistry.all(providerType);
+        for (ConfiguredProvider<T> provider : all) {
+            ConfiguredService configuredService = allConfigs.get(provider.configKey());
+            availableProviders.add(provider.configKey());
+            unusedConfigs.remove(provider.configKey());
+            if (configuredService == null) {
+                if (allFromServiceLoader) {
+                    // even though the specific key does not exist, we want to have the real config tree, so we can get to the
+                    // root of it
+                    // when there is no configuration, the name defaults to the type
+                    String type = provider.configKey();
+                    if (ignoredServices.add(new TypeAndName(type, type))) {
+                        result.add(provider.create(providersConfig.get(type), type));
+                    } else {
+                        if (PROVIDER_LOGGER.isLoggable(System.Logger.Level.DEBUG)) {
+                            PROVIDER_LOGGER.log(System.Logger.Level.DEBUG, "Service: " + new TypeAndName(type, type)
+                                    + " is already added in builder, ignoring configured one.");
+                        }
+                    }
+                }
+            } else {
+                if (configuredService.enabled()) {
+                    if (ignoredServices.add(configuredService.typeAndName())) {
+                        result.add(provider.create(configuredService.serviceConfig(),
+                                                   configuredService.typeAndName().name()));
+                    } else {
+                        if (PROVIDER_LOGGER.isLoggable(System.Logger.Level.DEBUG)) {
+                            PROVIDER_LOGGER.log(System.Logger.Level.DEBUG, "Service: " + configuredService.typeAndName()
+                                    + " is already added in builder, ignoring configured one.");
+                        }
+                    }
+                }
+            }
+        }
+
+        if (!unusedConfigs.isEmpty()) {
+            throw new ConfigException("Unknown provider configured. Expected providers with types: " + unusedConfigs
+                                              + ", but only the following providers are supported: " + availableProviders
+                                              + ", provider interface: " + providerType.getName()
+                                              + ", configured service: " + configType.getName());
+        }
+        return result;
+    }
+
+    private interface RegistryWrap {
+        <T> List<T> all(Class<T> type);
+    }
+
     private record TypeAndName(String type, String name) {
     }
 
     private record ConfiguredService(TypeAndName typeAndName, Config serviceConfig, boolean enabled) {
+    }
+
+    private static final class StaticAccessRegistry implements RegistryWrap {
+        public static final StaticAccessRegistry INSTANCE = new StaticAccessRegistry();
+
+        @Override
+        public <T> List<T> all(Class<T> type) {
+            return Services.all(type);
+        }
+    }
+
+    private static final class RealRegistry implements RegistryWrap {
+        private final ServiceRegistry serviceRegistry;
+
+        private RealRegistry(ServiceRegistry serviceRegistry) {
+            this.serviceRegistry = serviceRegistry;
+        }
+
+        @Override
+        public <T> List<T> all(Class<T> type) {
+            return serviceRegistry.all(type);
+        }
     }
 }
